--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p id="a">Paragraphe ! Yeah !</p>
-    <p>Paragraphe ! Yeah !</p>
+    <p id="b">Paragraphe ! Yeah !</p>
     <p>Paragraphe ! Yeah !</p>
     <p>Paragraphe ! Yeah !</p>
     <p>Paragraphe ! Yeah !</p>
