--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <p id="a">Paragraphe ! Yeah !</p>
     <p id="b">Paragraphe ! Yeah !</p>
-    <p>Paragraphe ! Yeah !</p>
-    <p>Paragraphe ! Yeah !</p>
-    <p>Paragraphe ! Yeah !</p>
-    <p>Paragraphe ! Yeah !</p>
-    <p>Paragraphe ! Yeah !</p>
-    <p>Paragraphe ! Yeah !</p>
-    <p>Paragraphe ! Yeah !</p>
-    <p>Paragraphe ! Yeah !</p>
+    <p id="c">Paragraphe ! Yeah !</p>
+    <p id="d">Paragraphe ! Yeah !</p>
+    <p id="e">Paragraphe ! Yeah !</p>
+    <p id="f">Paragraphe ! Yeah !</p>
+    <p id="g">Paragraphe ! Yeah !</p>
+    <p id="h">Paragraphe ! Yeah !</p>
+    <p id="i">Paragraphe ! Yeah !</p>
+    <p id="j">Paragraphe ! Yeah !</p>
 </body>
 </html>
