Removed a few more useless lines.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p id="a">Paragraphe ! Yeah !</p>
-    <p id="b">Paragraphe ! Yeah !</p>
-    <p id="c">Paragraphe ! Yeah !</p>
-    <p id="d">Paragraphe ! Yeah !</p>
-    <p id="e">Paragraphe ! Yeah !</p>
-    <p id="f">Paragraphe ! Yeah !</p>
-    <p id="g">Paragraphe ! Yeah !</p>
-    <p id="h">Paragraphe ! Yeah !</p>
-    <p id="i">Paragraphe ! Yeah !</p>
-    <p id="j">Paragraphe ! Yeah !</p>
+    <p>Paragraphe ! Yeah !</p>
+    <p>Paragraphe ! Yeah !</p>
+    <p>Paragraphe ! Yeah !</p>
+    <p>Paragraphe ! Yeah !</p>
+    <p>Paragraphe ! Yeah !</p>
+    <p>Paragraphe ! Yeah !</p>
+    <p>Paragraphe ! Yeah !</p>
+    <p>Paragraphe ! Yeah !</p>
+    <p>Paragraphe ! Yeah !</p>
+    <p>Paragraphe ! Yeah !</p>
 </body>
 </html>
